<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/orderByImage"
        android:title="Order By Image"
        android:icon="@drawable/camera"
        app:showAsAction="always"></item>

    <item android:id="@+id/orderByPhone"
        android:title="Order By Image"
        android:icon="@drawable/ic_baseline_phone_24"
        app:showAsAction="always"></item>

    <item android:id="@+id/setting"
        android:visible="false"
        android:title="@string/setting"></item>

    <item android:id="@+id/language"
        android:visible="false"
        android:title="@string/choose_language"></item>

    <item android:id="@+id/about_footbite"
        android:visible="false"
        android:title="@string/about_footbite"></item>

    <item android:id="@+id/exit"
        android:visible="false"
        android:title="@string/exit"></item>

</menu>