<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FrequentlyAskedQuestionFragment"
    android:orientation="vertical">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/white"
                android:text="@string/registration"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:background="@color/colorPrimary"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_do_i_register"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:text="@string/how_do_i_register_ans"
                android:paddingLeft="@dimen/_20sdp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Are_there_any_charges_for_registration"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:text="@string/Are_there_any_charges_for_registration_ans"
                android:paddingLeft="@dimen/_20sdp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_i_have_to_necesarilly"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:text="@string/do_i_have_to_necesarilly_ans"
                android:paddingLeft="@dimen/_20sdp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/can_i_add_more_delivery_address"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:text="@string/can_i_add_more_delivery_address_ans"
                android:paddingLeft="@dimen/_20sdp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/can_i_have_multiple_accounts"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:text="@string/can_i_have_multiple_accounts_ans"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingBottom="@dimen/_5sdp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/white"
                android:text="@string/account_related"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:background="@color/colorPrimary"></TextView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_is_my_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:text="@string/what_is_my_account_ans"
                android:paddingLeft="@dimen/_20sdp"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_are_credit_notes"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:text="@string/what_are_credit_notes_ans"
                android:paddingLeft="@dimen/_20sdp"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_is_shopping_list"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:text="@string/what_is_shopping_list_ans"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingBottom="@dimen/_5sdp"></TextView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>