<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp"
    android:id="@+id/rootView"
    tools:context=".activitites.RationRequestActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fill_the_following_details" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_state"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"/>

                <AutoCompleteTextView
                    android:id="@+id/stateAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColorHint="@color/black"
                    android:background="@drawable/orange_strock_bg"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_5sdp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_district"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"/>

                <AutoCompleteTextView
                    android:id="@+id/districtAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColorHint="@color/black"
                    android:background="@drawable/orange_strock_bg"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_5sdp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_ward"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"/>

                <AutoCompleteTextView
                    android:id="@+id/wardAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColorHint="@color/black"
                    android:background="@drawable/orange_strock_bg"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_5sdp"/>
            </LinearLayout>

            <View
                android:layout_below="@+id/AddToCartActivityBottomRelativeLayoutSubTotalPriceTextView"
                android:layout_width="@dimen/_300sdp"
                android:layout_centerHorizontal="true"
                android:layout_height="@dimen/_1sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/gray_color"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/enter_user_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:maxLines="1">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/enter_ration_card_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userRationCardNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:maxLines="1">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sendRequestButton"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:insetLeft="4dp"
                    android:textAllCaps="false"
                    android:layout_gravity="center"
                    android:text="@string/send_request">

                </com.google.android.material.button.MaterialButton>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>