<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/register_context"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="10dp"
    tools:context=".activitites.RegistrationActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_framelayout"
                    android:elevation="4dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_margin="20dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true">

                        <TextView
                            android:id="@+id/welcome_message"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="20dp"
                            android:fontFamily="@font/roboto_condensed_bold"
                            android:text="@string/please_sign_in_text"
                            android:textColor="#000"
                            android:textSize="28sp"></TextView>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/numberID"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/welcome_message"
                            android:hint="@string/hind_mobile_number"
                            app:counterEnabled="true"
                            app:counterMaxLength="10">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editext_to_put_user_mobile_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number">

                            </com.google.android.material.textfield.TextInputEditText>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_to_send_otp_on_mobile"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/numberID"
                            android:layout_centerHorizontal="true"
                            android:insetLeft="4dp"
                            android:text="@string/send_otp">

                        </com.google.android.material.button.MaterialButton>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/OTP_ID"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/button_to_send_otp_on_mobile"
                            android:hint="@string/OTP_hint"
                            app:counterEnabled="true"
                            app:counterMaxLength="6">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editext_to_put_otp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number">

                            </com.google.android.material.textfield.TextInputEditText>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/app_login_button"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/OTP_ID"
                            android:layout_centerHorizontal="true"
                            android:insetLeft="4dp"
                            android:text="@string/login_button">

                        </com.google.android.material.button.MaterialButton>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/skip_button"
                            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/app_login_button"
                            android:layout_alignParentRight="true"
                            android:insetLeft="4dp"
                            android:text="@string/skip_button">

                        </com.google.android.material.button.MaterialButton>

                    </RelativeLayout>

                </FrameLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>